AI-JADEDEVS4/src/objects/Industry_Classification__c.object
<CustomObject>
    <fields>
        <fullName>Adaptive_Industry__c</fullName>
        <label>Adaptive Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <label>NAICS Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Industry Classification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NAICS_Code__c</columns>
        <columns>NAICS_Description__c</columns>
        <columns>Adaptive_Industry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAICS_Code__c</columns>
        <columns>Adaptive_Industry__c</columns>
        <columns>NAICS_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_52</fullName>
        <columns>NAME</columns>
        <columns>Adaptive_Industry__c</columns>
        <columns>NAICS_Code__c</columns>
        <columns>NAICS_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAICS_Code__c</field>
            <operation>startsWith</operation>
            <value>52</value>
        </filters>
        <label>All 52</label>
    </listViews>
    <listViews>
        <fullName>All_56</fullName>
        <columns>Adaptive_Industry__c</columns>
        <columns>NAICS_Code__c</columns>
        <columns>NAICS_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAICS_Code__c</field>
            <operation>startsWith</operation>
            <value>56</value>
        </filters>
        <label>All 56</label>
    </listViews>
    <listViews>
        <fullName>All_NAICS</fullName>
        <columns>NAICS_Code__c</columns>
        <columns>NAICS_Description__c</columns>
        <columns>Adaptive_Industry__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All NAICS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X42_NAICS</fullName>
        <columns>NAICS_Code__c</columns>
        <columns>Adaptive_Industry__c</columns>
        <columns>NAICS_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAICS_Code__c</field>
            <operation>startsWith</operation>
            <value>42</value>
        </filters>
        <label>42 NAICS</label>
    </listViews>
    <listViews>
        <fullName>X45_NAICS_Codes</fullName>
        <columns>NAICS_Code__c</columns>
        <columns>NAICS_Description__c</columns>
        <columns>Adaptive_Industry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAICS_Code__c</field>
            <operation>startsWith</operation>
            <value>45</value>
        </filters>
        <label>45 NAICS Codes</label>
    </listViews>
    <listViews>
        <fullName>X48_NAICS</fullName>
        <columns>NAICS_Code__c</columns>
        <columns>NAICS_Description__c</columns>
        <columns>Adaptive_Industry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAICS_Code__c</field>
            <operation>startsWith</operation>
            <value>48</value>
        </filters>
        <label>48 NAICS</label>
    </listViews>
    <listViews>
        <fullName>X54_NAICS</fullName>
        <columns>NAICS_Code__c</columns>
        <columns>Adaptive_Industry__c</columns>
        <columns>NAICS_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAICS_Code__c</field>
            <operation>startsWith</operation>
            <value>54</value>
        </filters>
        <label>54 NAICS</label>
    </listViews>
    <listViews>
        <fullName>X55_NAICS_Codes</fullName>
        <columns>Adaptive_Industry__c</columns>
        <columns>NAICS_Code__c</columns>
        <columns>NAICS_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAICS_Code__c</field>
            <operation>startsWith</operation>
            <value>55</value>
        </filters>
        <label>55 NAICS Codes</label>
    </listViews>
    <listViews>
        <fullName>X71_NAICS</fullName>
        <columns>NAME</columns>
        <columns>Adaptive_Industry__c</columns>
        <columns>NAICS_Code__c</columns>
        <columns>NAICS_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAICS_Code__c</field>
            <operation>startsWith</operation>
            <value>71</value>
        </filters>
        <label>71 NAICS</label>
    </listViews>
    <nameField>
        <label>Industry Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>